--- a/Juntas_MC/PL/MercadosPiezas.resx
+++ b/Juntas_MC/PL/MercadosPiezas.resx
@@ -118,6 +118,20 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnAgregar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAS
+        dAAAEnQB3mYfeAAAAfZJREFUWEftll1LwlAYx/0U+Q2KQCPQ6EtE9HWCQG+igi4q0gKDICgICiywMooo
+        tegFK4pMZ6lpRmZkt1I87VnPkXl2Tmy17vzD727/l53BNkdLLfHqDd05vbOZiDeg1L2zCnT6o7ByloNs
+        vgi7sSMD1dq7kOWTe83rmVH8FG1OWrlazGADrpU7iOztGxCVI2wAZlgawe6cH5C8SUFgccmAqBzRD7A0
+        Ql+O2DUAMTVCb0AwZD6uQCb/YChfCK8Jy5HQfsYwAKEauXgDhgwE4/D0+gZKoQjnqbTGxW0aHp8rwvJy
+        9Q36pmP2DHCNfAf1B2Iwd5DRjvYn8M5ZuVv18nlUIxdv8ARvGyOsoJWrXj6PauTiDXZDNXKJTHZCNXKJ
+        THZCNXKJTHZCNXKJTHZCNXLxhh6Voe0SrF5WIHxlDrx2MFpqymFQjVy8YSpRFr5szDAZLzdlIVQjF2/I
+        v9SE4WbIVWpNWQjVyMUbWJjsf0BEtlBq+Pg8qpGLN7Cg8surFmyGJ/XafxhQ1U7BDDjW9gEYLDpuEXgK
+        vx8QTDcZWNBv0Wd51Gyqkcs9fvSpN4lCraDPco0df1CNXB3+rYh79BC6J5Iq57B2mv0TmIFZ7tEEdPo2
+        16lGLtfwjhNHtPs26vhdFz1jK2CGlqWWd/mibVTTUkskh+MLp4+/iapuAkEAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAQAMDAAAAEAIACoJQAARgAAABAQAAABACAAaAQAAO4lAAAgIAAAAQAgAKgQAABWKgAAQEAAAAEA
